nobase_include_HEADERS = InterViews/patch.h InterViews/texcomp.h	\
InterViews/superpose.h InterViews/boolean.h InterViews/geometry.h	\
InterViews/deck.h InterViews/raster.h InterViews/session.h		\
InterViews/tiff.h InterViews/simplecomp.h InterViews/monoglyph.h	\
InterViews/iv.h InterViews/style.h InterViews/selection.h		\
InterViews/scrbox.h InterViews/_names.h InterViews/tile.h		\
InterViews/leave-scope.h InterViews/printer.h InterViews/shadow.h	\
InterViews/action.h InterViews/debug.h InterViews/aggr.h		\
InterViews/event.h InterViews/psfont.h InterViews/adjust.h		\
InterViews/border.h InterViews/drag.h InterViews/rule.h			\
InterViews/page.h InterViews/reqerr.h InterViews/character.h		\
InterViews/enter-scope.h InterViews/place.h InterViews/tformsetter.h	\
InterViews/hit.h InterViews/layout.h InterViews/observe.h		\
InterViews/telltale.h InterViews/brush.h InterViews/alloctbl.h		\
InterViews/input.h InterViews/xymarker.h InterViews/transformer.h	\
InterViews/align.h InterViews/pattern.h InterViews/_undefs.h		\
InterViews/_leave.h InterViews/font.h InterViews/dialog.h		\
InterViews/label.h InterViews/group.h InterViews/polyglyph.h		\
InterViews/regexp.h InterViews/compositor.h InterViews/target.h		\
InterViews/glyph.h InterViews/color.h InterViews/composition.h		\
InterViews/cursor.h InterViews/box.h InterViews/arraycomp.h		\
InterViews/_enter.h InterViews/display.h InterViews/handler.h		\
InterViews/glue.h InterViews/_defines.h InterViews/background.h		\
InterViews/lrmarker.h InterViews/coord.h InterViews/glcontext.h		\
InterViews/stencil.h InterViews/image.h InterViews/resource.h		\
InterViews/canvas.h InterViews/window.h InterViews/bitmap.h OS/table.h	\
OS/directory.h OS/string.h OS/os.h OS/host.h OS/types.h			\
OS/leave-scope.h OS/memory.h OS/enter-scope.h OS/table2.h OS/_undefs.h	\
OS/math.h OS/list.h OS/ustring.h OS/_defines.h OS/file.h		\
IV-look/browser.h IV-look/smf_kit.h IV-look/ol_dialogs.h		\
IV-look/dialogs.h IV-look/bevel.h IV-look/mf_dialogs.h			\
IV-look/mono_kit.h IV-look/fbrowser.h IV-look/slider.h			\
IV-look/button.h IV-look/stepper.h IV-look/menu.h IV-look/telltale.h	\
IV-look/mf_kit.h IV-look/ol_kit.h IV-look/fchooser.h IV-look/field.h	\
IV-look/choice.h IV-look/kit.h TIFF/tiff.h TIFF/tiffio.h TIFF/format.h	\
Dispatch/iostreamb.h Dispatch/rpcpeer.h Dispatch/dp.h			\
Dispatch/rpcwriter.h Dispatch/leave-scope.h Dispatch/iohandler.h	\
Dispatch/enter-scope.h Dispatch/_undefs.h Dispatch/rpcstream.h		\
Dispatch/iocallback.h Dispatch/rpcbuf.h Dispatch/rpcservice.h		\
Dispatch/_defines.h Dispatch/rpcregistry.h Dispatch/rpcreader.h		\
Dispatch/rpchdr.h Dispatch/dispatcher.h Unidraw/Graphic/lines.h		\
Unidraw/Graphic/polygons.h Unidraw/Graphic/damage.h			\
Unidraw/Graphic/rasterrect.h Unidraw/Graphic/ulabel.h			\
Unidraw/Graphic/splines.h Unidraw/Graphic/util.h			\
Unidraw/Graphic/verts.h Unidraw/Graphic/picture.h			\
Unidraw/Graphic/geomobjs.h Unidraw/Graphic/ellipses.h			\
Unidraw/Graphic/pspaint.h Unidraw/Graphic/graphic.h			\
Unidraw/Graphic/ustencil.h Unidraw/Graphic/grblock.h			\
Unidraw/ctrlinfo.h Unidraw/uformat.h Unidraw/Components/grview.h	\
Unidraw/Components/pin.h Unidraw/Components/rect.h			\
Unidraw/Components/grcomp.h Unidraw/Components/connector.h		\
Unidraw/Components/component.h Unidraw/Components/psformat.h		\
Unidraw/Components/link.h Unidraw/Components/csolver.h			\
Unidraw/Components/line.h Unidraw/Components/text.h			\
Unidraw/Components/externview.h Unidraw/Components/psview.h		\
Unidraw/Components/slot.h Unidraw/Components/pad.h			\
Unidraw/Components/cglue.h Unidraw/Components/polygon.h			\
Unidraw/Components/rastercomp.h Unidraw/Components/spline.h		\
Unidraw/Components/gvupdater.h Unidraw/Components/vertices.h		\
Unidraw/Components/stencilcomp.h Unidraw/Components/ellipse.h		\
Unidraw/Components/compview.h Unidraw/statevars.h Unidraw/transfns.h	\
Unidraw/selection.h Unidraw/dialogs.h Unidraw/leave-scope.h		\
Unidraw/grid.h Unidraw/classes.h Unidraw/iterator.h			\
Unidraw/Commands/macro.h Unidraw/Commands/catcmds.h			\
Unidraw/Commands/viewcmds.h Unidraw/Commands/brushcmd.h			\
Unidraw/Commands/datas.h Unidraw/Commands/edit.h			\
Unidraw/Commands/patcmd.h Unidraw/Commands/struct.h			\
Unidraw/Commands/nop.h Unidraw/Commands/align.h				\
Unidraw/Commands/font.h Unidraw/Commands/transforms.h			\
Unidraw/Commands/import.h Unidraw/Commands/dirty.h			\
Unidraw/Commands/command.h Unidraw/Commands/data.h			\
Unidraw/Commands/colorcmd.h Unidraw/uctrl.h Unidraw/enter-scope.h	\
Unidraw/stateview.h Unidraw/ulist.h Unidraw/clipboard.h			\
Unidraw/upage.h Unidraw/editor.h Unidraw/Tools/scale.h			\
Unidraw/Tools/move.h Unidraw/Tools/connect.h Unidraw/Tools/rotate.h	\
Unidraw/Tools/stretch.h Unidraw/Tools/select.h				\
Unidraw/Tools/grcomptool.h Unidraw/Tools/reshape.h			\
Unidraw/Tools/magnify.h Unidraw/Tools/tool.h Unidraw/_undefs.h		\
Unidraw/statevar.h Unidraw/path.h Unidraw/manips.h Unidraw/uctrls.h	\
Unidraw/uarray.h Unidraw/transfn.h Unidraw/viewer.h Unidraw/manip.h	\
Unidraw/unidraw.h Unidraw/keymap.h Unidraw/kybd.h Unidraw/catalog.h	\
Unidraw/creator.h Unidraw/umap.h Unidraw/_defines.h			\
Unidraw/stateviews.h Unidraw/uhash.h Unidraw/editorinfo.h		\
Unidraw/globals.h IV-2_6/InterViews/shape.h				\
IV-2_6/InterViews/streditor.h IV-2_6/InterViews/rubcurve.h		\
IV-2_6/InterViews/textdisplay.h IV-2_6/InterViews/viewport.h		\
IV-2_6/InterViews/filechooser.h IV-2_6/InterViews/scroller.h		\
IV-2_6/InterViews/deck.h IV-2_6/InterViews/rubline.h			\
IV-2_6/InterViews/rubgroup.h IV-2_6/InterViews/textstyle.h		\
IV-2_6/InterViews/textbuffer.h IV-2_6/InterViews/iwindow.h		\
IV-2_6/InterViews/rubverts.h IV-2_6/InterViews/panner.h			\
IV-2_6/InterViews/strbrowser.h IV-2_6/InterViews/banner.h		\
IV-2_6/InterViews/alignment.h IV-2_6/InterViews/sensor.h		\
IV-2_6/InterViews/button.h IV-2_6/InterViews/border.h			\
IV-2_6/InterViews/message.h IV-2_6/InterViews/world.h			\
IV-2_6/InterViews/frame.h IV-2_6/InterViews/matcheditor.h		\
IV-2_6/InterViews/menu.h IV-2_6/InterViews/defs.h			\
IV-2_6/InterViews/compeditor.h IV-2_6/InterViews/perspective.h		\
IV-2_6/InterViews/scrollbar.h IV-2_6/InterViews/filebrowser.h		\
IV-2_6/InterViews/minmax.h IV-2_6/InterViews/texteditor.h		\
IV-2_6/InterViews/rubrect.h IV-2_6/InterViews/dialog.h			\
IV-2_6/InterViews/subject.h IV-2_6/InterViews/interactor.h		\
IV-2_6/InterViews/scene.h IV-2_6/InterViews/box.h			\
IV-2_6/InterViews/strchooser.h IV-2_6/InterViews/ihandler.h		\
IV-2_6/InterViews/adjuster.h IV-2_6/InterViews/tray.h			\
IV-2_6/InterViews/paint.h IV-2_6/InterViews/glue.h			\
IV-2_6/InterViews/control.h IV-2_6/InterViews/painter.h			\
IV-2_6/InterViews/rubband.h IV-2_6/_names.h IV-2_6/_leave.h		\
IV-2_6/_enter.h IV-X11/xdisplay.h IV-X11/xcanvas.h IV-X11/xcolor.h	\
IV-X11/Xdefs.h IV-X11/Xext.h IV-X11/xpainter.h IV-X11/xbrush.h		\
IV-X11/Xundefs.h IV-X11/xevent.h IV-X11/xpattern.h IV-X11/xwindow.h	\
IV-X11/xraster.h IV-X11/xdrag.h IV-X11/xfont.h IV-X11/xcursor.h		\
IV-X11/Xlib.h IV-X11/xbitmap.h IV-X11/xselection.h IV-X11/Xutil.h	\
ivstd/iosfwd ivstd/signal.h ivstd/string.h ivstd/leakchecker.h		\
ivstd/malloc.h ivstd/stdio.h ivstd/math.h ivstd/nan.h			\
ivstd/iostream.h ivstd/fstream.h ivstd/osfcn.h ivstd/stdlib.h		\
ivstd/stream.h
